--- a/OneDrive/Desktop/Food-Delivery/frontend/src/components/FoodItem/FoodItem.css
+++ b/OneDrive/Desktop/Food-Delivery/frontend/src/components/FoodItem/FoodItem.css
@@ -9,10 +9,11 @@
 .food-item-image{
   width: 100%;
   border-radius: 15px 15px 0px 0px;
+  height:260px;
 }
 .food-item-info{
   padding: 20px;
-  max-height: 250px;
+  max-height: 160px;
 }
 .food-item-name-rating{
   display: flex;
@@ -63,4 +64,7 @@
 .food-item-counter img{
   width: 25px;
   cursor: pointer;
+}
+@media (max-width:700px) {
+  
 }
